--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,36 @@
-html,
-body,
-#root {
+body {
+  margin: 0;
+}
+
+canvas {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  position: relative;
   height: 100vh;
   width: 100vw;
-  margin: 0;
   background-color: black;
+}
+
+.preview {
+  z-index: 1000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 800px;
+  height: 500px;
+  transform: translate(-50%, -50%);
+}
+
+.preview.hide {
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.preview.show {
+  opacity: 1;
+  pointer-events: auto;
 }
